Add daily food log read action
